--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,16 @@
 sonar.projectKey=skc0201_Angular-Checkr
 sonar.organization=shubham-zemoso0201
 sonar.host.url=https://sonarcloud.io
+sonar.verbose=true
 sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/*.spec.js,**/*.stories.ts,**/*.stories.tsx,**/android/**,**/ios/**,**.js,**/fs-app/**,**/fs-renderer/**,**/*.e2e.tsx,**/loaders/**,**/services/**,**/utils/**,**/realm/**,**/i18next/**, **/e2e/**
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
 sonar.sourceEncoding=UTF-8
+sonar.exclusions=**/*.spec.ts,**/*.js
+sonar.coverage.exclusions=src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
+sonar.testExecutionReportPaths=$(System.DefaultWorkingDirectory)/test-results/sonarcloud-report.xml
+sonar.javascript.lcov.reportPaths=$(System.DefaultWorkingDirectory)/test-results/coverage/lcov.info
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Angular-Checkr
 #sonar.projectVersion=1.0
