--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,10 +4,10 @@ sonar.host.url=https://sonarcloud.io
 sonar.verbose=true
 sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=**/*.spec.ts
-sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/*.spec.ts,**/*.js
-sonar.coverage.exclusions=src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
+sonar.test.inclusions=**/*.spec.ts,**/*test.ts
+sonar.sourceEncoding=UTF-8
+sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Angular-Checkr
