--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.exclusions=**/*.spec.ts,**/*.js
 sonar.test.inclusions=**/*.spec.ts,**/*test.ts
 sonar.sourceEncoding=UTF-8
 sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
+sonar.javascript.lcov.reportPaths=./coverage/checkr-app/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Angular-Checkr
